--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -59,3 +59,6 @@ Style/PercentLiteralDelimiters:
 
 Lint/MissingCopEnableDirective:
   Enabled: false
+
+Style/ParallelAssignment:
+  Enabled: false
